--- a/style/main.css
+++ b/style/main.css
@@ -44,7 +44,7 @@ header nav a:hover{
 
 .filme-principal{
     font-size: 16px;
-    background: linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,.50)100%), url('/img/eddard-stark.jpg');
+    background: linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,.50)100%), url('../img/eddard-stark.jpg');
     height: 400px;
     background-size: cover;
     display: flex;
